[package]
name = "bb-imager-service"
description = "BeagleBoard Imaging Service"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
zbus_polkit = "5.0"
bb-flasher-pb2-mspm0 = { path = "../bb-flasher-pb2-mspm0" , features = ["serde", "zvariant"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.packager]
category = "DeveloperTool"
out_dir = "dist"

[package.metadata.packager.linux]
generate_desktop_entry = false

[package.metadata.packager.deb.files]
"assets/dbus-org.beagleboard.ImagingService.service" = "/usr/lib/systemd/system/dbus-org.beagleboard.ImagingService.service"
"assets/org.beagleboard.ImagingService.conf" = "/usr/share/dbus-1/system.d/org.beagleboard.ImagingService.conf"
"assets/org.beagleboard.ImagingService.policy" = "/usr/share/polkit-1/actions/org.beagleboard.ImagingService.policy"
"assets/org.beagleboard.ImagingService.service" = "/usr/share/dbus-1/system-services/org.beagleboard.ImagingService.service"

[package.metadata.packager.pacman.files]
"assets/dbus-org.beagleboard.ImagingService.service" = "/usr/lib/systemd/system/dbus-org.beagleboard.ImagingService.service"
"assets/org.beagleboard.ImagingService.conf" = "/usr/share/dbus-1/system.d/org.beagleboard.ImagingService.conf"
"assets/org.beagleboard.ImagingService.policy" = "/usr/share/polkit-1/actions/org.beagleboard.ImagingService.policy"
"assets/org.beagleboard.ImagingService.service" = "/usr/share/dbus-1/system-services/org.beagleboard.ImagingService.service"
