[package]
name = "bb-imager"
description = "Library to support bb-imager-cli and bb-imager-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
liblzma = { version = "0.3.6", features = ["static", "parallel"] }
chrono = { version = "0.4.39", optional = true , default-features = false }
const-hex = { version = "1.14.0" }
crc32fast = "1.4.2"
directories = "6.0.0"
reqwest = { version = "0.12.12", features = ["stream"] }
semver = { version = "1.0.25", optional = true }
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.139", optional = true }
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread", "process", "fs", "time"] }
tracing = "0.1.41"
url = "2.5.4"
futures = "0.3.31"
tempfile = "3.17.1"
bb-flasher-pb2-mspm0 = { path = "../bb-flasher-pb2-mspm0", optional = true }
bb-flasher-bcf = { path = "../bb-flasher-bcf", features = ["msp430", "cc1352p7"] }
bb-flasher-sd = { path = "../bb-flasher-sd" }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"], optional = true}
serde_with = { version = "3.12.0", optional = true }
bin_file = { version = "0.1", optional = true }

[features]
default = []
udev = ["bb-flasher-sd/udev"]
pb2_mspm0_raw = ["bb-flasher-pb2-mspm0", "dep:bin_file"]
pb2_mspm0_dbus = ["dep:zbus", "dep:serde", "dep:bin_file"]
config = ["dep:serde_json", "dep:serde", "dep:serde_with", "const-hex/serde", "semver/serde", "url/serde", "chrono/serde", "reqwest/json"]
macos_authopen = ["bb-flasher-sd/macos_authopen"]
