[package]
name = "bb-imager-cli"
version = "0.0.2"
edition = "2021"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
description = "Library to support bb-imager-cli and bb-imager-gui"
repository = "https://openbeagle.org/ayush1325/bb-imager-rs"
license = "MIT"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
bb-imager = { path = "../bb-imager" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
indicatif = "0.17.8"
