[package]
name = "bb-imager-cli"
description = "Library to support bb-imager-cli and bb-imager-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
bb-imager = { path = "../bb-imager", version = "0.0.3" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
indicatif = "0.17.8"
