[package]
name = "bb-imager-gui"
description = "Library to support bb-imager-cli and bb-imager-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.13.1", features = ["image", "svg", "tokio", "advanced"] }
rfd = { version = "0.15.0", default-features = false, features = ["xdg-portal", "tokio"] }
bb-imager = { path = "../bb-imager", version = "0.0.3" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
iced_aw = { version = "0.11.0", default-features = false, features = ["badge"] }
image = "0.25.4"
tokio = { version = "1.41.0", default-features = false, features = ["macros"] }
webbrowser = "1.0.2"
notify-rust = "4.11.3"

[build-dependencies]
embed-resource = "2.5.0"
