[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_mangen = "0.2.24"
bb-imager-cli = { path = "../cli" }
clap_complete = "4.5.40"
