[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap_mangen = "0.2.26"
clap_complete = "4.5.45"
url = "2.5.4"
cargo_toml = "0.21.0"

[features]
default = []
pb2_mspm0 = []
bcf_cc1352p7 = []
bcf_msp430 = []
