[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4.5"
url = "2.5"
cargo_toml = "0.22"

[features]
default = []
pb2_mspm0 = []
bcf_cc1352p7 = []
bcf_msp430 = []
